<resources>
    <string name="app_name">My Grocery Store</string>
    <string name="open_drawer">Open Navigation</string>
    <string name="close_drawer">Close Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="my_carts">My Carts</string>
    <string name="my_orders">My Orders</string>
    <string name="new_products">New Products</string>
    <string name="offers">Offers</string>
    <string name="category">Category</string>
    <string name="profile">Profile</string>
    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
</resources>